test_fixtures/string/unterminated.lox
// ScannerError: UnterminatedString from l3c1 to l3c31
// ParserError: ExpectedSemicolon found String from l3c1 to l3c31
"this string has no close quote